# enterprise-knowledge-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  base_cronjob.py  docker-compose.gpu.yml  docker-compose.yml  index.html  main.py  pyproject.toml
.github/workflows/: docker.yml  pylanguage.yml  pylint.yml  pytest.yml
charts/knowledge-hub/: Chart.yaml  values.yaml
charts/knowledge-hub/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/knowledge-hub/templates/tests/: test-connection.yaml
config/: default-logging.yaml
content_scraper/: base_cronjob.py  latest_dump_date.json
content_scraper/scripts/: wiki_dump_update.py
deployments/argocd/: README.md  application.yaml  dev-application.yaml  local-application.yaml  prod-application.yaml
deployments/argocd/dev/: ekh-application.yaml
deployments/argocd/prod/: ekh-application.yaml
deployments/charts/ekh/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
deployments/charts/ekh/templates/: deployment.yaml  ingress.yaml  postgresql-secret.yaml  rabbitmq-url-secret.yaml  service.yaml
deployments/charts/enterprise-knowledge-hub/: CHANGELOG.md  Chart.yaml
deployments/charts/enterprise-knowledge-hub/templates/: ingress.yaml  postgresql-secret.yaml  rabbitmq-url-secret.yaml
deployments/charts/knowledge-hub/: CHANGELOG.md  Chart.yaml  values.yaml
deployments/charts/knowledge-hub/templates/: _helpers.tpl  deployment.yaml  service.yaml
deployments/ekh/: Chart.yaml  values-dev.yaml  values-local.yaml  values-prod.yaml  values.yaml
deployments/ekh/sql/: 01_init_ekh_schema.sql
deployments/ekh/templates/: _helpers.tpl  deployment.yaml  initdb-configmap.yaml  postgresql-secret.yaml  pvc.yaml  secrets.yaml  service.yaml
docs/: database.md  flowchart.md  mermaid-diagram.md  ssl-issue.md  svc-wikipedia.md
docs/certs/: 1ca-ac1-2026.pem  1ca-ac1-2037.pem  GOC-GDC-ROOT-A.crt  proxy.crt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Result.jsx
frontend/src/pages/: Search.jsx  Status.jsx
provider/embedding/: base.py  chunk_text.py  embeddingUtil.py  embedding_util.py  llama_cpp.py  llama_cpp_backend.py  local.txt  rng_embedder.py  tokenizer.py  torch.py  torch_backend.py
provider/embedding/qwen3/: embedder_factory.py  llama.py  llama_embed.py  sentence_transformer.py
provider/queue/: base.py  rabbitmq.py
repository/: base.py  base_model.py  connection_pool.py  database.py  knowledge_wikipedia.py  knowledge_wikipedia_model.py  model.py  pool_provider.py  postgrespg.py  run_history.py  run_history_model.py
repository/migration/: initial_baseline.py  run_migrations.py
router/database_interaction/: endpoints.py
router/frontend/: frontend.py  index.html
router/frontend/templates/: status.html
router/knowledge/: endpoints.py  run_state.py
router/root/: run_management_endpoints.py  search_retrieve_endpoints.py
services/content_scraper/: base_cronjob.py
services/database/: database_service.py  knowledge_item_service.py  run_history_service.py
services/db/: model.py  postgrespg.py
services/knowledge/: base.py  batch_handler.py  models.py  query.py  wikipedia.py
services/knowledge/wikipedia/: batch_time_tracker.py  models.py  wikipedia.py
services/queue/: queue_service.py  queue_worker.py
services/stats/: knowledge_service_stats.py
tests/services/knowledge/: test_wikipedia_process_index_file.py
