[project]
name = "enterprise-knowledge-hub"
version = "1.1.0"
description = "Enterprise Knowledge hub to index the documents from various sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "fastapi[standard]>=0.124.4",
    "langchain>=1.2.1",
    "ninja>=1.13.0",
    "pgvector>=0.2.5",
    "pika>=1.3.2",
    "psycopg[binary,pool]>=3.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "wikitextparser>=0.56.4",
]

[project.optional-dependencies]
# CUDA-specific dependencies that require NVIDIA GPU and CUDA toolkit
flash = [
    "flash-attn>=2.8.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
